@@ -1,3 +1,5 @@
+2006/5/8 -- released version 20060508_trunk
+
 2006/5/7 -- released version 20060507_trunk
 
 2006/5/6 -- released version 20060506_trunk
